--- a/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/detail.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/detail.html
@@ -1,5 +1,5 @@
 {% extends 'nova/base.html' %}
-{% load i18n %}
+{% load i18n sizeformat %}
 
 {% block page_header %}
   {# to make searchable false, just remove it from the include statement #}
@@ -20,9 +20,9 @@
           <div class="status">
             <h4>{% trans "Status" %}</h4>
             <ul>
-              <li><span>{% trans "Status:" %}</span> {{instance.status}}</li>
-              <li><span>{% trans "Instance Name:" %}</span> {{instance.name}}</li>
-              <li><span>{% trans "Instance ID:" %}</span> {{instance.id}}</li>
+              <li><span>{% trans "Status:" %}</span> {{ instance.status }}</li>
+              <li><span>{% trans "Instance Name:" %}</span> {{ instance.name }}</li>
+              <li><span>{% trans "Instance ID:" %}</span> {{ instance.id }}</li>
             </ul>
           </div>
         </li>
@@ -31,9 +31,9 @@
           <div class="specs">
             <h4>{% trans "Specs" %}</h4>
             <ul>
-              <li><span>{% trans "RAM:" %}</span> {{instance.attrs.memory_mb}}</li>
-              <li><span>{% trans "VCPUs:" %}</span> {{instance.attrs.vcpus}} {% trans "VCPU" %}</li>
-              <li><span>{% trans "Disk:" %}</span> {{instance.attrs.disk_gb}}{% trans "GB Disk" %}</li>
+              <li><span>{% trans "RAM:" %}</span> {{ instance.full_flavor.ram|mbformat }}</li>
+              <li><span>{% trans "VCPUs:" %}</span> {{ instance.full_flavor.vcpus }} {% trans "VCPU" %}</li>
+              <li><span>{% trans "Disk:" %}</span> {{ instance.full_flavor.disk }}{% trans "GB" %}</li>
             </ul>
           </div>
         </li>
@@ -42,9 +42,11 @@
           <div class="meta">
             <h4>{% trans "Meta" %}</h4>
             <ul>
-              <li><span>{% trans "Key name:" %}</span> {{instance.attrs.key_name}}</li>
+              <li><span>{% trans "Key name:" %}</span> {{ instance.key_name }}</li>
+              {% comment %} Security Groups aren't sent back from Nova anymore...
               <li><span>{% trans "Security Group(s):" %}</span> {% for group in instance.attrs.security_groups %}{{group}}, {% endfor %}</li>
-              <li><span>{% trans "Image Name:" %}</span> {{instance.image_name}}</li>
+              {% endcomment %}
+              <li><span>{% trans "Image Name:" %}</span> {{ instance.image_name }}</li>
             </ul>
           </div>
         </li>
