--- a/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_list.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_list.html
@@ -1,4 +1,3 @@
-<!-- TODO(termie): move most of this to horizon -->
 {% load sizeformat %}
 {% load i18n %}
 
@@ -19,10 +18,10 @@
   <thead>
     <tr>
       <th></th>
-      <th>{% trans "Name"%}</th>
-      <th>{% trans "Size"%}</th>
-      <th>{% trans "State"%}</th>
-      <th>{% trans "Actions"%}</th>
+      <th>{% trans "Name" %}</th>
+      <th>{% trans "Size" %}</th>
+      <th>{% trans "State" %}</th>
+      <th>{% trans "Actions" %}</th>
     </tr>
   </thead>
   <tbody>
@@ -41,11 +40,13 @@
         <td id="name_{{ instance.name }}" class="actions">
           <a class="more-actions" href="#">More</a>
           <ul>
-            <li><a class="btn small" target='_blank' href='{% url horizon:nova:instances_and_volumes:instances:vnc instance.id %}'>{% trans 'VNC Console'%}</a></li>
-            <li><a class='btn small' target='_blank' href='{% url horizon:nova:instances_and_volumes:instances:console instance.id %}'>{% trans 'Log'%}</a></li>
-            <li><a class='btn small' href='{% url horizon:nova:instances_and_volumes:instances:update instance.id %}'>{% trans 'Edit'%}</a></li>
-            <li><a class='btn small' href='{% url horizon:nova:images_and_snapshots:snapshots:create instance.id %}'>{% trans 'Snapshot'%}</a></li>
-            <li>{% include 'nova/instances_and_volumes/instances/_reboot.html' with form=reboot_form %}</li>
+            {% if instance.status != "ACTIVE" %}
+              <li><a class="btn small" target='_blank' href='{% url horizon:nova:instances_and_volumes:instances:vnc instance.id %}'>{% trans 'VNC Console' %}</a></li>
+              <li><a class='btn small' target='_blank' href='{% url horizon:nova:instances_and_volumes:instances:console instance.id %}'>{% trans 'Log' %}</a></li>
+              <li><a class='btn small' href='{% url horizon:nova:images_and_snapshots:snapshots:create instance.id %}'>{% trans 'Snapshot' %}</a></li>
+              <li>{% include 'nova/instances_and_volumes/instances/_reboot.html' with form=reboot_form %}</li>
+            {% endif %}
+            <li><a class='btn small' href='{% url horizon:nova:instances_and_volumes:instances:update instance.id %}'>{% trans 'Edit' %}</a></li>
             <li>{% include 'nova/instances_and_volumes/instances/_terminate.html' with form=terminate_form %}</li>
           </ul>
         </td>
