--- a/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_list.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_list.html
@@ -40,7 +40,7 @@
         <td id="name_{{ instance.name }}" class="actions">
           <a class="more-actions" href="#">More</a>
           <ul>
-            {% if instance.status != "ACTIVE" %}
+            {% if instance.status == "ACTIVE" %}
               <li><a class="btn small" target='_blank' href='{% url horizon:nova:instances_and_volumes:instances:vnc instance.id %}'>{% trans 'VNC Console' %}</a></li>
               <li><a class='btn small' target='_blank' href='{% url horizon:nova:instances_and_volumes:instances:console instance.id %}'>{% trans 'Log' %}</a></li>
               <li><a class='btn small' href='{% url horizon:nova:images_and_snapshots:snapshots:create instance.id %}'>{% trans 'Snapshot' %}</a></li>
