Adding page titles to all pages.
Fixing Bug 897068

Change-Id: Ia70eb999740b3212aa760318e839f2ff94dc8c7d

--- a/horizon/horizon/dashboards/nova/templates/nova/containers/index.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/containers/index.html
@@ -1,5 +1,6 @@
 {% extends 'nova/base.html' %}
 {% load i18n %}
+{% block title %}Containers{% endblock %}
 
 {% block page_header %}
   {% url horizon:nova:images_and_snapshots:images:index as refresh_link %}
