--- a/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/launch.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/launch.html
@@ -1,5 +1,6 @@
 {% extends 'nova/base.html' %}
 {% load i18n %}
+{% block title %}Launch Image{% endblock %}
 
 {% block sidebar %}
   {% with current_sidebar="images" %}
