--- a/horizon/horizon/dashboards/nova/templates/nova/networks/index.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/networks/index.html
@@ -1,5 +1,6 @@
 {% extends 'nova/base.html' %}
 {% load i18n %}
+{% block title %}Networks{% endblock %}
 
 {% block page_header %}
   {% url horizon:nova:networks:index as refresh_link %}
