--- a/horizon/horizon/dashboards/settings/templates/settings/user/settings.html
+++ b/horizon/horizon/dashboards/settings/templates/settings/user/settings.html
@@ -1,5 +1,6 @@
 {% extends 'settings/base.html' %}
 {% load i18n %}
+{% block title %}User Settings{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Dashboard Settings") %}
