--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/images/update.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/images/update.html
@@ -1,5 +1,6 @@
 {% extends 'syspanel/base.html' %}
 {% load i18n %}
+{% block title %}Update Image{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Update Image") %}
