--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/instances/detail.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/instances/detail.html
@@ -1,5 +1,6 @@
 {% extends 'syspanel/base.html' %}
 {% load i18n %}
+{% block title %}Instance Detail{% endblock %}
 
 {% block page_header %}
   {# to make searchable false, just remove it from the include statement #}
