--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/instances/tenant_usage.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/instances/tenant_usage.html
@@ -1,5 +1,6 @@
 {% extends 'syspanel/base.html' %}
 {% load i18n parse_date sizeformat %}
+{% block title %}Tenant Usage Overview{% endblock %}
 
 {% block page_header %}
   {# to make searchable false, just remove it from the include statement #}
