--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/users.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/users.html
@@ -1,5 +1,6 @@
 {% extends 'syspanel/base.html' %}
 {% load i18n %}
+{% block title %}Tenant Users{% endblock %}
 
 {% block page_header %}
   <div class='page-header'>
