--- a/horizon/horizon/dashboards/nova/templates/nova/access_and_security/floating_ips/index.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/access_and_security/floating_ips/index.html
@@ -1,5 +1,6 @@
 {% extends 'nova/base.html' %}
 {% load i18n %}
+{% block title %}Floating IPs{% endblock %}
 
 {% block page_header %}
   {% url horizon:nova:access_and_security:floating_ips:index as refresh_link %}
