--- a/horizon/horizon/dashboards/nova/templates/nova/access_and_security/index.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/access_and_security/index.html
@@ -1,5 +1,6 @@
 {% extends 'nova/base.html' %}
 {% load i18n %}
+{% block title %}Access &amp; Security{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Access &amp; Security") %}
