--- a/horizon/horizon/dashboards/nova/templates/nova/access_and_security/security_groups/create.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/access_and_security/security_groups/create.html
@@ -1,5 +1,6 @@
 {% extends 'nova/base.html' %}
 {% load i18n %}
+{% block title %}Create Security Group{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Create Security Group") %}
