--- a/horizon/horizon/dashboards/nova/templates/nova/access_and_security/security_groups/edit_rules.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/access_and_security/security_groups/edit_rules.html
@@ -1,5 +1,6 @@
 {% extends 'nova/base.html' %}
 {% load i18n %}
+{% block title %}Edit Security Group Rules{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Edit Security Group Rules") %}
