--- a/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/index.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/index.html
@@ -1,5 +1,6 @@
 {% extends 'nova/base.html' %}
 {% load i18n %}
+{% block title %}Images &amp; Snapshots{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Images &amp; Snapshots") %}
