--- a/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/snapshots/index.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/images_and_snapshots/snapshots/index.html
@@ -1,5 +1,6 @@
 {% extends 'nova/base.html' %}
 {% load i18n %}
+{% block title %}Snapshots{% endblock %}
 
 {% block page_header %}
   {% url horizon:nova:snapshots:index as refresh_link %}
