--- a/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/detail.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/detail.html
@@ -1,5 +1,6 @@
 {% extends 'nova/base.html' %}
 {% load i18n sizeformat %}
+{% block title %}Instance Detail{% endblock %}
 
 {% block page_header %}
   {# to make searchable false, just remove it from the include statement #}
