--- a/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/usage.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/usage.html
@@ -1,5 +1,6 @@
 {% extends 'nova/base.html' %}
 {% load i18n parse_date sizeformat %}
+{% block title %}Instance Overview{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title="Overview: "|add:"<small>This page shows your cloud usage.</small>" %}
