--- a/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/volumes/attach.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/volumes/attach.html
@@ -1,5 +1,6 @@
 {% extends 'nova/base.html' %}
 {% load i18n %}
+{% block title %}Attach Volume{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Attach a Volume") %}
