--- a/horizon/horizon/dashboards/nova/templates/nova/objects/index.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/objects/index.html
@@ -1,5 +1,6 @@
 {% extends 'nova/base.html' %}
 {% load i18n %}
+{% block title %}Objects{% endblock %}
 
 {% block page_header %}
   <div class='page-header'>
