--- a/horizon/horizon/dashboards/nova/templates/nova/ports/create.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/ports/create.html
@@ -1,5 +1,6 @@
 {% extends 'nova/base.html' %}
 {% load i18n %}
+{% block title %}Create Port{% endblock %}
 
 {% block page_header %}
   {# to make searchable false, just remove it from the include statement #}
