--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/services/index.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/services/index.html
@@ -1,5 +1,6 @@
 {% extends 'syspanel/base.html' %}
 {% load i18n %}
+{% block title %}Services{% endblock %}
 
 {% block page_header %}
   {% url horizon:syspanel:services:index as refresh_link %}
