--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/create.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/create.html
@@ -1,5 +1,6 @@
 {% extends 'syspanel/base.html' %}
 {% load i18n %}
+{% block title %}Create Tenant{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Create Tenant") %}
