--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/quotas.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/quotas.html
@@ -1,5 +1,6 @@
 {% extends 'syspanel/base.html' %}
 {% load i18n %}
+{% block title %}Modify Tenant Quotas{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Update Tenant") %}
