Fixing cancel button on create flavor page.
Fixes Bug 905073

Change-Id: I6d1a3948748d01c90ba95f423dcf987da91fd628

--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/flavors/_create.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/flavors/_create.html
@@ -21,5 +21,5 @@
 
 {% block modal-footer %}
   <input class="btn primary pull-right" type="submit" value="{% trans "Create Flavor" %}" />
-  <a href="{% url horizon:syspanel:flavors:index" class="btn secondary cancel close">Cancel</a>
+  <a href="{% url horizon:syspanel:flavors:index %}" class="btn secondary cancel close">Cancel</a>
 {% endblock %}
