--- a/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_list.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_list.html
@@ -19,6 +19,7 @@
     <tr>
       <th></th>
       <th>{% trans "Name" %}</th>
+      <th>{% trans "IP" %}</th>
       <th>{% trans "Size" %}</th>
       <th>{% trans "State" %}</th>
       <th>{% trans "Actions" %}</th>
@@ -32,6 +33,24 @@
         </td>
         <td class="name">
           <a href="{% url horizon:nova:instances_and_volumes:instances:detail instance.id %}">{{ instance.name }}</a>
+        </td>
+        <td>
+            {% for ip_group, addresses in instance.addresses.items %}
+              {% if instance.addresses.items|length > 1 %}
+              <h4>{{ip_group}}</h4>
+              <ul>
+                {% for address in addresses %}
+                  <li>{{address.addr}}</li>
+                {% endfor %}
+              </ul>
+              {% else %}
+              <ul>
+                {% for address in addresses %}
+                  <li>{{address.addr}}</li>
+                {% endfor %}
+              </ul>
+              {% endif %}
+            {% endfor %}
         </td>
         <td>
           {{ instance.full_flavor.ram|mbformat }} Ram | {{ instance.full_flavor.vcpus }} VCPU | {{ instance.full_flavor.disk }}GB Disk
