--- a/openstack-dashboard/dashboard/templates/base.html
+++ b/openstack-dashboard/dashboard/templates/base.html
@@ -5,11 +5,10 @@
   <head>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type' />
     <title>{% block title %}{% endblock %} – {% site_branding %} Dashboard</title>
-    <script src='{{ STATIC_URL }}dashboard/js/jquery.min.js' type='text/javascript'></script>
-    <script src='{{ STATIC_URL }}dashboard/js/jquery.quicksearch.js' type='text/javascript'></script>
-    <script src='{{ STATIC_URL }}dashboard/js/jquery.example.min.js' type='text/javascript'></script>
-    <script src="{{ STATIC_URL }}dashboard/js/jquery.table-sorter.js" type="text/javascript" charset="utf-8"></script>
-    <script src='{{ STATIC_URL }}dashboard/js/form_examples.js' type='text/javascript'></script>
+    <script src='{{ STATIC_URL }}dashboard/js/jquery/jquery.min.js' type='text/javascript'></script>
+    <script src='{{ STATIC_URL }}dashboard/js/jquery/jquery.quicksearch.js' type='text/javascript'></script>
+    <script src='{{ STATIC_URL }}dashboard/js/jquery/jquery.example.min.js' type='text/javascript'></script>
+    <script src="{{ STATIC_URL }}dashboard/js/jquery/jquery.table-sorter.js" type="text/javascript" charset="utf-8"></script>
     <script src="{{ STATIC_URL }}dashboard/js/bootstrap/bootstrap-twipsy.js" type="text/javascript" charset="utf-8"></script>
     <script src="{{ STATIC_URL }}dashboard/js/bootstrap/bootstrap-alerts.js" type="text/javascript" charset="utf-8"></script>
     <script src="{{ STATIC_URL }}dashboard/js/bootstrap/bootstrap-dropdown.js" type="text/javascript" charset="utf-8"></script>
@@ -17,7 +16,13 @@
     <script src="{{ STATIC_URL }}dashboard/js/bootstrap/bootstrap-popover.js" type="text/javascript" charset="utf-8"></script>
     <script src="{{ STATIC_URL }}dashboard/js/bootstrap/bootstrap-scrollspy.js" type="text/javascript" charset="utf-8"></script>
     <script src="{{ STATIC_URL }}dashboard/js/bootstrap/bootstrap-tabs.js" type="text/javascript" charset="utf-8"></script>
-    <script charset='utf-8' src='{{ STATIC_URL }}dashboard/js/application.js' type='text/javascript'></script>
+    <script src='{{ STATIC_URL }}dashboard/js/horizon.js' type='text/javascript' charset='utf-8'></script>
+    <script src='{{ STATIC_URL }}dashboard/js/plugins.js' type='text/javascript' charset='utf-8'></script>
+    <script src='{{ STATIC_URL }}dashboard/js/tables.js' type='text/javascript' charset='utf-8'></script>
+    <script src='{{ STATIC_URL }}dashboard/js/modals.js' type='text/javascript' charset='utf-8'></script>
+    <script src='{{ STATIC_URL }}dashboard/js/forms.js' type='text/javascript' charset='utf-8'></script>
+    <script src='{{ STATIC_URL }}dashboard/js/navigation.js' type='text/javascript' charset='utf-8'></script>
+    <script src='{{ STATIC_URL }}dashboard/js/form_examples.js' type='text/javascript'></script>
     <link href='{{ STATIC_URL }}dashboard/css/bootstrap.css' media='screen' rel='stylesheet' />
     <link href='{{ STATIC_URL }}dashboard/css/style.css' media='screen' rel='stylesheet' />
     <link rel="shortcut icon" href="{{ STATIC_URL }}dashboard/images/favicon.ico"/>
