Wraps all cancel button in trans tag
Fixes bug 891796

Change-Id: I126fdb9117f62b6d84116b7307d768532dca5865

--- a/horizon/horizon/dashboards/nova/templates/nova/networks/_rename.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/networks/_rename.html
@@ -20,5 +20,5 @@
 
 {% block modal-footer %}
     <input class="btn primary pull-right" type="submit" value="{% trans "Rename Network" %}" />
-    <a href="{% url horizon:nova:networks:index %}" class="btn secondary cancel close">Cancel</a>
+    <a href="{% url horizon:nova:networks:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
 {% endblock %}
