--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/images/_update.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/images/_update.html
@@ -6,6 +6,6 @@
 {% block modal-footer %}
 <div class="modal-footer">
   <input class="btn primary pull-right" type="submit" value="{% trans "Update Image" %}" />
-  <a href="#" class="btn secondary cancel close">Cancel</a>
+  <a href="#" class="btn secondary cancel close">{% trans "Cancel" %}</a>
 </div>
 {% endblock %}
