--- a/horizon/horizon/dashboards/nova/templates/nova/access_and_security/floating_ips/_associate.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/access_and_security/floating_ips/_associate.html
@@ -20,5 +20,5 @@
 
 {% block modal-footer %}
   <input class="btn primary pull-right" type="submit" value="{% trans "Associate IP" %}" />
-  <a href="{% url horizon:nova:access_and_security:index %}" class="btn secondary cancel close">Cancel</a>
+  <a href="{% url horizon:nova:access_and_security:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
 {% endblock %}
