--- a/horizon/horizon/dashboards/nova/templates/nova/access_and_security/keypairs/_import.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/access_and_security/keypairs/_import.html
@@ -21,5 +21,5 @@
 
 {% block modal-footer %}
   <input class="btn primary pull-right" type="submit" value="{% trans "Import Keypair" %}" />
-  <a href="{% url horizon:nova:access_and_security:index %}" class="btn secondary cancel close">Cancel</a>
+  <a href="{% url horizon:nova:access_and_security:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
 {% endblock %}
