--- a/horizon/horizon/dashboards/nova/templates/nova/access_and_security/security_groups/_edit_rules.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/access_and_security/security_groups/_edit_rules.html
@@ -46,7 +46,7 @@
     </div>
     <div class="modal-footer">
       <input class="btn primary pull-right" type="submit" value="{% trans "Add Rule" %}" />
-      <a href="{% url horizon:nova:access_and_security:index %}" class="btn secondary cancel close">Cancel</a>
+      <a href="{% url horizon:nova:access_and_security:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
     </div>
   </form>
 </div>
