--- a/horizon/horizon/dashboards/nova/templates/nova/containers/_create.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/containers/_create.html
@@ -20,5 +20,5 @@
 
 {% block modal-footer %}
   <input class="btn primary pull-right" type="submit" value="{% trans "Create Container" %}" />
-  <a href="{% url horizon:nova:containers:index %}" class="btn secondary cancel close">Cancel</a>
+  <a href="{% url horizon:nova:containers:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
 {% endblock %}
