--- a/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_update.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_update.html
@@ -20,5 +20,5 @@
 
 {% block modal-footer %}
   <input class="btn primary pull-right" type="submit" value="{% trans "Update Instance" %}" />
-  <a href="{% url horizon:nova:instances_and_volumes:instances:index %}" class="btn secondary cancel close">Cancel</a>
+  <a href="{% url horizon:nova:instances_and_volumes:instances:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
 {% endblock %}
