--- a/horizon/horizon/dashboards/settings/templates/settings/tenant/_openrc.html
+++ b/horizon/horizon/dashboards/settings/templates/settings/tenant/_openrc.html
@@ -21,6 +21,6 @@
 
 {% block modal-footer %}
     <input class="btn primary pull-right" type="submit" value="{% trans "Download RC File" %}" />
-    {% if hide %}<a href="{% url horizon:settings:tenant:index %}" class="btn secondary cancel close">Cancel</a>{% endif %}
+    {% if hide %}<a href="{% url horizon:settings:tenant:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>{% endif %}
 {% endblock %}
 
