--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/_create.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/_create.html
@@ -21,5 +21,5 @@
 
 {% block modal-footer %}
     <input class="btn primary pull-right" type="submit" value="{% trans "Create Tenant" %}" />
-    <a href="{% url horizon:syspanel:tenants:index %}" class="btn secondary cancel close">Cancel</a>
+    <a href="{% url horizon:syspanel:tenants:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
 {% endblock %}
