--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/_quotas.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/_quotas.html
@@ -20,5 +20,5 @@
 
 {% block modal-footer %}
     <input class="btn primary pull-right" type="submit" value="{% trans "Update Quota" %}" />
-  <a href="{% url horizon:syspanel:tenants:index %}" class="btn secondary cancel close">Cancel</a>
+  <a href="{% url horizon:syspanel:tenants:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
 {% endblock %}
