--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/users/_create.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/users/_create.html
@@ -20,5 +20,5 @@
 
 {% block modal-footer %}
   <input class="btn primary pull-right" type="submit" value="{% trans "Create User" %}" />
-  <a href="{% url horizon:syspanel:users:index %}" class="btn secondary cancel close">Cancel</a>
+  <a href="{% url horizon:syspanel:users:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
 {% endblock %}
