Converts syspanel.tenants to use DataTables and modal forms.
Also introduces helper class-based views for DataTable index views
and modal SelfHandlingForm views to abstract away boilerplate.

Change-Id: I117336645bc2f046a47cd40096f6d8ac9e79aa49

--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/_list.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/_list.html
@@ -1,26 +1,1 @@
-{% load i18n %}
-<table class="zebra-striped">
-  <tr>
-    <th>{% trans "Id" %}</th>
-    <th>{% trans "Name" %}</th>
-    <th>{% trans "Description" %}</th>
-    <th>{% trans "Enabled" %}</th>
-    <th>{% trans "Options" %}</th>
-  </tr>
-  {% for tenant in tenants %}
-    <tr class="{% cycle 'odd' 'even' %}">
-      <td>{{ tenant.id }}</td>
-      <td>{{ tenant.name }}</td>
-      <td>{{ tenant.description }}</td>
-      <td>{{ tenant.enabled }}</td>
-      <td id="actions">
-        <ul>
-          <li class="form">{% include "syspanel/tenants/_delete.html" with form=tenant_delete_form %}</li>
-          <li><a class="btn small" href="{% url horizon:syspanel:tenants:update tenant.id %}">{% trans "Edit" %}</a></li>
-          <li><a class="btn small" href="{% url horizon:syspanel:tenants:users tenant.id %}">{% trans "View Members" %}</a></li>
-          <li><a class="btn small" href="{% url horizon:syspanel:tenants:quotas tenant.id %}">{% trans "Modify Quotas" %}</a></li>
-        </ul>
-      </td>
-    </tr>
-  {% endfor %}
-</table>
+{{ table.render }}
