--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/_update.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/_update.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block form_id %}{% endblock %}
-{% block form_action %}{% url horizon:syspanel:tenants:update tenant_id %}{% endblock %}
+{% block form_action %}{% url horizon:syspanel:tenants:update tenant.id %}{% endblock %}
 
 {% block modal-header %}{% endblock %}
 
