Cleanup on syspanel.users to use new CBV's.
Change-Id: I8f75f5f569f104d88e74c03410644147e77dfc53

--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/users/_update.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/users/_update.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block form_id %}update_tenant_form{% endblock %}
-{% block form_action %}{% url horizon:syspanel:users:update user_id %}{% endblock %}
+{% block form_action %}{% url horizon:syspanel:users:update user.id %}{% endblock %}
 
 {% block modal-header %}{% trans "Update User" %}{% endblock %}
 
