--- a/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/index.html
+++ b/horizon/horizon/dashboards/syspanel/templates/syspanel/tenants/index.html
@@ -9,5 +9,5 @@
 {% endblock page_header %}
 
 {% block syspanel_main %}
-  {% include "syspanel/tenants/_list.html" %}
+  {{ table.render }}
 {% endblock %}
