Implement tooltips using twipsy and field help_text property.
Change-Id: I1912b61d95ff9f10797a8520e7230310ed669bd3

--- a/horizon/horizon/templates/horizon/common/_form_fields.html
+++ b/horizon/horizon/templates/horizon/common/_form_fields.html
@@ -2,7 +2,7 @@
   {{ hidden }}
 {% endfor %}
 {% for field in form.visible_fields %}
-  <div class="clearfix{% if field.errors %} error{% endif %}">
+  <div class="form-field clearfix{% if field.errors %} error{% endif %}">
     {{ field.label_tag }}
     {% if field.errors %}
       {% for error in field.errors %}
