Float ALL form checkboxes left
Change-Id: Ifb32ea628087135dfb21702e7ba0ffe8994eeb95

--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -810,7 +810,7 @@ td.multi_select_column {
   text-align: center;
 }
 
-.launch_image input[type="checkbox"] {
+div.input input[type="checkbox"] {
   float: left;
   width: 25px;
 }
