--- a/horizon/horizon/dashboards/nova/templates/nova/access_and_security/keypairs/index.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/access_and_security/keypairs/index.html
@@ -7,8 +7,8 @@
 {% endblock page_header %}
 
 {% block dash_main %}
-  {% if keypairs %}
-    {% include 'nova/access_and_security/keypairs/_list.html' %}
+  {% if table.data %}
+    {{ table.render }}
   {% else %}
     <div class="alert-message block-message info">
       <p><strong>{% trans "Info: " %}</strong>{% trans "There are currently no keypairs." %}</p>
