--- a/horizon/horizon/dashboards/nova/templates/nova/access_and_security/floating_ips/_associate.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/access_and_security/floating_ips/_associate.html
@@ -2,9 +2,9 @@
 {% load i18n %}
 
 {% block form_id %}associate_floating_ip_form{% endblock %}
-{% block form_action %}{% url horizon:nova:access_and_security:floating_ips:associate floating_ip_id %}{% endblock %}
+{% block form_action %}{% url horizon:nova:access_and_security:floating_ips:associate floating_ip.id %}{% endblock %}
 
-{% block modal-header %}Associate Floating IP{% endblock %}
+{% block modal-header %}{% trans "Associate Floating IP" %}{% endblock %}
 
 {% block modal-body %}
 <div class="left">
