--- a/horizon/horizon/dashboards/nova/templates/nova/access_and_security/security_groups/create.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/access_and_security/security_groups/create.html
@@ -7,5 +7,5 @@
 {% endblock page_header %}
 
 {% block dash_main %}
-    {% include 'nova/access_and_security/security_groups/_create.html' with form=form %}
+    {% include 'nova/access_and_security/security_groups/_create.html' %}
 {% endblock %}
