Converts nova.containers to use new tables, modals, etc.
Adds support for generic paging to tables, as well as various
improvements to the tables and actions APIs. Adds more data
to the container and object table displays to make them
more useful.

Change-Id: I6c7434657de4398a9da30911b281275d7c978d8b

--- a/horizon/horizon/dashboards/nova/templates/nova/objects/copy.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/objects/copy.html
@@ -7,7 +7,7 @@
 {% endblock page_header %}
 
 {% block dash_main %}
-    {% include 'nova/objects/_copy.html' with form=copy_form %}
+    {% include 'nova/objects/_copy.html' %}
 {% endblock %}
 
 
