--- a/horizon/horizon/dashboards/nova/templates/nova/objects/upload.html
+++ b/horizon/horizon/dashboards/nova/templates/nova/objects/upload.html
@@ -7,7 +7,7 @@
 {% endblock page_header %}
 
 {% block dash_main %}
-    {% include 'nova/objects/_upload.html' with form=upload_form %}
+    {% include 'nova/objects/_upload.html' %}
 {% endblock %}
 
 
